--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -20,6 +20,52 @@
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="wFZ-Bv-7n8">
                                 <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                                 <color key="backgroundColor" name="YP Black (iOS)"/>
+                                <prototypes>
+                                    <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="ImagesListCell" rowHeight="183" id="XY5-yZ-v9f" customClass="ImagesListCell" customModule="ImageFeed" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="50" width="414" height="183"/>
+                                        <autoresizingMask key="autoresizingMask"/>
+                                        <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" tableViewCell="XY5-yZ-v9f" id="LUn-1q-L37">
+                                            <rect key="frame" x="0.0" y="0.0" width="414" height="183"/>
+                                            <autoresizingMask key="autoresizingMask"/>
+                                            <subviews>
+                                                <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="xWI-5u-9Yc" userLabel="Cell Image">
+                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="183"/>
+                                                </imageView>
+                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VeA-Iq-8t5" userLabel="Like Button">
+                                                    <rect key="frame" x="374" y="12" width="30" height="26"/>
+                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                    <state key="normal" image="ActiveLike"/>
+                                                </button>
+                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27 августа 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vfM-0h-uK1" userLabel="Date Label">
+                                                    <rect key="frame" x="8" y="154" width="128" height="21"/>
+                                                    <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                    <color key="textColor" name="YP White (iOS)"/>
+                                                    <nil key="highlightedColor"/>
+                                                </label>
+                                            </subviews>
+                                            <constraints>
+                                                <constraint firstItem="vfM-0h-uK1" firstAttribute="leading" secondItem="LUn-1q-L37" secondAttribute="leading" constant="8" id="4AT-s6-YiM"/>
+                                                <constraint firstAttribute="trailing" secondItem="xWI-5u-9Yc" secondAttribute="trailing" id="4Ho-ed-NhI"/>
+                                                <constraint firstAttribute="bottom" secondItem="vfM-0h-uK1" secondAttribute="bottom" constant="8" id="9dz-dH-6Q4"/>
+                                                <constraint firstItem="VeA-Iq-8t5" firstAttribute="top" secondItem="LUn-1q-L37" secondAttribute="top" constant="12" id="DHG-1m-i4y"/>
+                                                <constraint firstItem="xWI-5u-9Yc" firstAttribute="top" secondItem="LUn-1q-L37" secondAttribute="top" id="NYp-o4-nd3"/>
+                                                <constraint firstAttribute="trailing" secondItem="VeA-Iq-8t5" secondAttribute="trailing" constant="10" id="dGD-eZ-9f7"/>
+                                                <constraint firstAttribute="bottom" secondItem="xWI-5u-9Yc" secondAttribute="bottom" id="fIC-hH-B8R"/>
+                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="vfM-0h-uK1" secondAttribute="trailing" id="hB0-yo-2fR"/>
+                                                <constraint firstItem="xWI-5u-9Yc" firstAttribute="leading" secondItem="LUn-1q-L37" secondAttribute="leading" id="mRu-CQ-EIf"/>
+                                            </constraints>
+                                        </tableViewCellContentView>
+                                        <color key="backgroundColor" name="YP White (Alpha 50) (iOS)"/>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
+                                                <integer key="value" value="16"/>
+                                            </userDefinedRuntimeAttribute>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.masksToBounds">
+                                                <integer key="value" value="16"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
+                                    </tableViewCell>
+                                </prototypes>
                                 <connections>
                                     <outlet property="dataSource" destination="BYZ-38-t0r" id="8JX-uo-kun"/>
                                     <outlet property="delegate" destination="BYZ-38-t0r" id="6zP-wU-EXr"/>
@@ -41,12 +87,20 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="76" y="-2"/>
+            <point key="canvasLocation" x="75.362318840579718" y="-2.0089285714285712"/>
         </scene>
     </scenes>
     <resources>
+        <image name="0" width="200" height="132"/>
+        <image name="ActiveLike" width="30" height="26"/>
         <namedColor name="YP Black (iOS)">
             <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="YP White (Alpha 50) (iOS)">
+            <color red="1" green="1" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
+        </namedColor>
+        <namedColor name="YP White (iOS)">
+            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
     </resources>
 </document>
