--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -29,41 +29,38 @@
                                             <autoresizingMask key="autoresizingMask"/>
                                             <subviews>
                                                 <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="0" translatesAutoresizingMaskIntoConstraints="NO" id="xWI-5u-9Yc" userLabel="Cell Image">
-                                                    <rect key="frame" x="0.0" y="0.0" width="414" height="183"/>
+                                                    <rect key="frame" x="16" y="4" width="382" height="175"/>
                                                 </imageView>
-                                                <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VeA-Iq-8t5" userLabel="Like Button">
-                                                    <rect key="frame" x="374" y="12" width="30" height="26"/>
-                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
-                                                    <state key="normal" image="ActiveLike"/>
-                                                </button>
-                                                <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27 августа 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vfM-0h-uK1" userLabel="Date Label">
-                                                    <rect key="frame" x="8" y="154" width="128" height="21"/>
+                                                <label opaque="NO" userInteractionEnabled="NO" tag="2" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="27 августа 2022" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="vfM-0h-uK1" userLabel="Date Label">
+                                                    <rect key="frame" x="24" y="150" width="128" height="21"/>
                                                     <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                     <color key="textColor" name="YP White (iOS)"/>
                                                     <nil key="highlightedColor"/>
                                                 </label>
+                                                <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="VeA-Iq-8t5" userLabel="Like Button">
+                                                    <rect key="frame" x="356" y="4" width="42" height="42"/>
+                                                    <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                                    <state key="normal" image="Like"/>
+                                                </button>
                                             </subviews>
                                             <constraints>
-                                                <constraint firstItem="vfM-0h-uK1" firstAttribute="leading" secondItem="LUn-1q-L37" secondAttribute="leading" constant="8" id="4AT-s6-YiM"/>
-                                                <constraint firstAttribute="trailing" secondItem="xWI-5u-9Yc" secondAttribute="trailing" id="4Ho-ed-NhI"/>
-                                                <constraint firstAttribute="bottom" secondItem="vfM-0h-uK1" secondAttribute="bottom" constant="8" id="9dz-dH-6Q4"/>
-                                                <constraint firstItem="VeA-Iq-8t5" firstAttribute="top" secondItem="LUn-1q-L37" secondAttribute="top" constant="12" id="DHG-1m-i4y"/>
-                                                <constraint firstItem="xWI-5u-9Yc" firstAttribute="top" secondItem="LUn-1q-L37" secondAttribute="top" id="NYp-o4-nd3"/>
-                                                <constraint firstAttribute="trailing" secondItem="VeA-Iq-8t5" secondAttribute="trailing" constant="10" id="dGD-eZ-9f7"/>
-                                                <constraint firstAttribute="bottom" secondItem="xWI-5u-9Yc" secondAttribute="bottom" id="fIC-hH-B8R"/>
-                                                <constraint firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="vfM-0h-uK1" secondAttribute="trailing" id="hB0-yo-2fR"/>
-                                                <constraint firstItem="xWI-5u-9Yc" firstAttribute="leading" secondItem="LUn-1q-L37" secondAttribute="leading" id="mRu-CQ-EIf"/>
+                                                <constraint firstItem="vfM-0h-uK1" firstAttribute="leading" secondItem="xWI-5u-9Yc" secondAttribute="leading" constant="8" id="4AT-s6-YiM"/>
+                                                <constraint firstAttribute="trailing" secondItem="xWI-5u-9Yc" secondAttribute="trailing" constant="16" id="4Ho-ed-NhI"/>
+                                                <constraint firstItem="xWI-5u-9Yc" firstAttribute="bottom" secondItem="vfM-0h-uK1" secondAttribute="bottom" constant="8" id="9dz-dH-6Q4"/>
+                                                <constraint firstItem="xWI-5u-9Yc" firstAttribute="top" secondItem="LUn-1q-L37" secondAttribute="top" constant="4" id="NYp-o4-nd3"/>
+                                                <constraint firstItem="VeA-Iq-8t5" firstAttribute="top" secondItem="xWI-5u-9Yc" secondAttribute="top" id="S71-5Q-gLc"/>
+                                                <constraint firstItem="xWI-5u-9Yc" firstAttribute="trailing" secondItem="VeA-Iq-8t5" secondAttribute="trailing" id="TTh-US-Xje"/>
+                                                <constraint firstAttribute="bottom" secondItem="xWI-5u-9Yc" secondAttribute="bottom" constant="4" id="fIC-hH-B8R"/>
+                                                <constraint firstItem="xWI-5u-9Yc" firstAttribute="trailing" relation="greaterThanOrEqual" secondItem="vfM-0h-uK1" secondAttribute="trailing" constant="8" id="hB0-yo-2fR"/>
+                                                <constraint firstItem="xWI-5u-9Yc" firstAttribute="leading" secondItem="LUn-1q-L37" secondAttribute="leading" constant="16" id="mRu-CQ-EIf"/>
                                             </constraints>
                                         </tableViewCellContentView>
-                                        <color key="backgroundColor" name="YP White (Alpha 50) (iOS)"/>
-                                        <userDefinedRuntimeAttributes>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
-                                                <integer key="value" value="16"/>
-                                            </userDefinedRuntimeAttribute>
-                                            <userDefinedRuntimeAttribute type="number" keyPath="layer.masksToBounds">
-                                                <integer key="value" value="16"/>
-                                            </userDefinedRuntimeAttribute>
-                                        </userDefinedRuntimeAttributes>
+                                        <color key="backgroundColor" name="YP Black (iOS)"/>
+                                        <connections>
+                                            <outlet property="cellImage" destination="xWI-5u-9Yc" id="84P-Q5-0KE"/>
+                                            <outlet property="dateLabel" destination="vfM-0h-uK1" id="zMN-Ek-hUL"/>
+                                            <outlet property="likeButton" destination="VeA-Iq-8t5" id="ejM-Yr-NJp"/>
+                                        </connections>
                                     </tableViewCell>
                                 </prototypes>
                                 <connections>
@@ -92,12 +89,9 @@
     </scenes>
     <resources>
         <image name="0" width="200" height="132"/>
-        <image name="ActiveLike" width="30" height="26"/>
+        <image name="Like" width="42" height="42"/>
         <namedColor name="YP Black (iOS)">
             <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
-        </namedColor>
-        <namedColor name="YP White (Alpha 50) (iOS)">
-            <color red="1" green="1" blue="1" alpha="0.5" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
         <namedColor name="YP White (iOS)">
             <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
