--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -86,10 +86,81 @@
             </objects>
             <point key="canvasLocation" x="75.362318840579718" y="-2.0089285714285712"/>
         </scene>
+        <!--ProfileView-->
+        <scene sceneID="44M-nw-aMu">
+            <objects>
+                <viewController title="ProfileView" id="PWZ-g5-AhM" customClass="ProfileViewController" customModule="ImageFeed" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="qB9-bs-jyh">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="DefaultProfileIcon" translatesAutoresizingMaskIntoConstraints="NO" id="5IV-7r-nNR" userLabel="Profile Image">
+                                <rect key="frame" x="16" y="76" width="70" height="70"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="70" id="02B-PZ-1Oy"/>
+                                    <constraint firstAttribute="width" constant="70" id="4uJ-Kh-KAq"/>
+                                </constraints>
+                            </imageView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fGT-E1-zSn" userLabel="Quit Button">
+                                <rect key="frame" x="368" y="100" width="20" height="22"/>
+                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
+                                <state key="normal" image="QuitIcon"/>
+                            </button>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Екатерина Новикова" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6hK-Hw-cfj" userLabel="Name Label">
+                                <rect key="frame" x="16" y="154" width="382" height="27.5"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="23"/>
+                                <color key="textColor" name="YP White (iOS)"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Привет, я Екатерина!" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="FyM-bY-v21" userLabel="About Label">
+                                <rect key="frame" x="16" y="213.5" width="382" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" name="YP White (iOS)"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="@ekaterina_nov" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dxC-Zm-RFf" userLabel="Nickname Label">
+                                <rect key="frame" x="16" y="189.5" width="382" height="16"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="13"/>
+                                <color key="textColor" name="YP White (iOS)"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="oSl-V9-xjX"/>
+                        <color key="backgroundColor" name="YP Black (iOS)"/>
+                        <constraints>
+                            <constraint firstItem="5IV-7r-nNR" firstAttribute="leading" secondItem="qB9-bs-jyh" secondAttribute="leading" constant="16" id="5NZ-2o-a0V"/>
+                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="dxC-Zm-RFf" secondAttribute="trailing" constant="16" id="5R0-h3-49J"/>
+                            <constraint firstAttribute="trailing" secondItem="fGT-E1-zSn" secondAttribute="trailing" constant="26" id="89K-Ie-3hf"/>
+                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="6hK-Hw-cfj" secondAttribute="trailing" constant="16" id="9I8-HH-DxP"/>
+                            <constraint firstItem="6hK-Hw-cfj" firstAttribute="top" secondItem="5IV-7r-nNR" secondAttribute="bottom" constant="8" id="CiY-Zc-L9N"/>
+                            <constraint firstItem="FyM-bY-v21" firstAttribute="top" secondItem="dxC-Zm-RFf" secondAttribute="bottom" constant="8" id="DIk-iM-7XD"/>
+                            <constraint firstItem="fGT-E1-zSn" firstAttribute="top" secondItem="qB9-bs-jyh" secondAttribute="top" constant="100" id="JPe-gb-Jcc"/>
+                            <constraint firstItem="dxC-Zm-RFf" firstAttribute="top" secondItem="6hK-Hw-cfj" secondAttribute="bottom" constant="8" id="PH6-mc-d1s"/>
+                            <constraint firstItem="dxC-Zm-RFf" firstAttribute="leading" secondItem="qB9-bs-jyh" secondAttribute="leading" constant="16" id="R1d-5q-uq6"/>
+                            <constraint firstItem="5IV-7r-nNR" firstAttribute="top" secondItem="qB9-bs-jyh" secondAttribute="top" constant="76" id="naj-1q-Igb"/>
+                            <constraint firstAttribute="trailing" relation="lessThanOrEqual" secondItem="FyM-bY-v21" secondAttribute="trailing" constant="16" id="nbw-E9-cgf"/>
+                            <constraint firstItem="FyM-bY-v21" firstAttribute="leading" secondItem="qB9-bs-jyh" secondAttribute="leading" constant="16" id="qDv-4z-qCB"/>
+                            <constraint firstItem="6hK-Hw-cfj" firstAttribute="leading" secondItem="qB9-bs-jyh" secondAttribute="leading" constant="16" id="uJd-o4-Orb"/>
+                        </constraints>
+                    </view>
+                    <connections>
+                        <outlet property="aboutLabel" destination="FyM-bY-v21" id="CiQ-Tr-FPc"/>
+                        <outlet property="nameLabel" destination="6hK-Hw-cfj" id="Vc2-LB-Lm8"/>
+                        <outlet property="nicknameLabel" destination="dxC-Zm-RFf" id="zld-4J-I4Y"/>
+                        <outlet property="profileImage" destination="5IV-7r-nNR" id="B0e-fy-ry2"/>
+                        <outlet property="quitButton" destination="fGT-E1-zSn" id="DDc-re-djh"/>
+                    </connections>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="ljG-G8-5Pr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-330.43478260869568" y="-675"/>
+        </scene>
     </scenes>
     <resources>
         <image name="0" width="200" height="132"/>
+        <image name="DefaultProfileIcon" width="70" height="70"/>
         <image name="Like" width="42" height="42"/>
+        <image name="QuitIcon" width="20" height="22"/>
         <namedColor name="YP Black (iOS)">
             <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </namedColor>
