--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="wBw-sz-tL2">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
@@ -9,6 +9,28 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
+        <!--Tab Bar Controller-->
+        <scene sceneID="t5K-M6-TUJ">
+            <objects>
+                <tabBarController id="wBw-sz-tL2" sceneMemberID="viewController">
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="SBT-rR-6N8">
+                        <rect key="frame" x="0.0" y="0.0" width="393" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+                        <color key="selectedImageTintColor" name="YP White (iOS)"/>
+                        <tabBarAppearance key="standardAppearance">
+                            <color key="backgroundColor" name="YP Black (iOS)"/>
+                        </tabBarAppearance>
+                    </tabBar>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="NDi-Br-FiV"/>
+                        <segue destination="PWZ-g5-AhM" kind="relationship" relationship="viewControllers" id="BNg-9W-Lga"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="HiO-XU-fHa" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-829" y="-331"/>
+        </scene>
         <!--ImageList-->
         <scene sceneID="tne-QT-ifu">
             <objects>
@@ -78,13 +100,14 @@
                             <constraint firstItem="wFZ-Bv-7n8" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="no0-Ar-JS5"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="" image="ImageListBarActiveIcon" id="bcL-Ya-Dap"/>
                     <connections>
                         <outlet property="tableView" destination="wFZ-Bv-7n8" id="Fdh-gx-VDG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75.362318840579718" y="-2.0089285714285712"/>
+            <point key="canvasLocation" x="74" y="-22"/>
         </scene>
         <!--ProfileView-->
         <scene sceneID="44M-nw-aMu">
@@ -143,6 +166,7 @@
                             <constraint firstItem="6hK-Hw-cfj" firstAttribute="leading" secondItem="qB9-bs-jyh" secondAttribute="leading" constant="16" id="uJd-o4-Orb"/>
                         </constraints>
                     </view>
+                    <tabBarItem key="tabBarItem" title="" image="ProfileBarActiveIcon" id="Da7-e9-p4H"/>
                     <connections>
                         <outlet property="aboutLabel" destination="FyM-bY-v21" id="CiQ-Tr-FPc"/>
                         <outlet property="nameLabel" destination="6hK-Hw-cfj" id="Vc2-LB-Lm8"/>
@@ -153,13 +177,15 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ljG-G8-5Pr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-330.43478260869568" y="-675"/>
+            <point key="canvasLocation" x="75" y="-629"/>
         </scene>
     </scenes>
     <resources>
         <image name="0" width="200" height="132"/>
         <image name="DefaultProfileIcon" width="70" height="70"/>
+        <image name="ImageListBarActiveIcon" width="20" height="22"/>
         <image name="Like" width="42" height="42"/>
+        <image name="ProfileBarActiveIcon" width="24" height="24"/>
         <image name="QuitIcon" width="20" height="22"/>
         <namedColor name="YP Black (iOS)">
             <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
