--- a/ImageFeed/Base.lproj/Main.storyboard
+++ b/ImageFeed/Base.lproj/Main.storyboard
@@ -23,7 +23,7 @@
                         </tabBarAppearance>
                     </tabBar>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="NDi-Br-FiV"/>
+                        <segue destination="b6o-Mf-D36" kind="relationship" relationship="viewControllers" id="NDi-Br-FiV"/>
                         <segue destination="PWZ-g5-AhM" kind="relationship" relationship="viewControllers" id="BNg-9W-Lga"/>
                     </connections>
                 </tabBarController>
@@ -100,14 +100,14 @@
                             <constraint firstItem="wFZ-Bv-7n8" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="top" id="no0-Ar-JS5"/>
                         </constraints>
                     </view>
-                    <tabBarItem key="tabBarItem" title="" image="ImageListBarActiveIcon" id="bcL-Ya-Dap"/>
+                    <navigationItem key="navigationItem" id="vdY-eO-pa9"/>
                     <connections>
                         <outlet property="tableView" destination="wFZ-Bv-7n8" id="Fdh-gx-VDG"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="74" y="-22"/>
+            <point key="canvasLocation" x="984.05797101449286" y="-22.098214285714285"/>
         </scene>
         <!--ProfileView-->
         <scene sceneID="44M-nw-aMu">
@@ -177,7 +177,31 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ljG-G8-5Pr" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="75" y="-629"/>
+            <point key="canvasLocation" x="984.05797101449286" y="-629.46428571428567"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="hbK-f3-NaN">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="b6o-Mf-D36" sceneMemberID="viewController">
+                    <tabBarItem key="tabBarItem" title="" image="ImageListBarActiveIcon" id="bcL-Ya-Dap"/>
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="B47-r2-Xuq">
+                        <rect key="frame" x="0.0" y="48" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="tintColor" name="YP White (iOS)"/>
+                        <color key="barTintColor" name="YP White (iOS)"/>
+                        <navigationBarAppearance key="standardAppearance">
+                            <color key="backgroundColor" name="YP Black (iOS)"/>
+                        </navigationBarAppearance>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="VbH-zp-zuX"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="JPb-6c-fLQ" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="73.913043478260875" y="-22.098214285714285"/>
         </scene>
     </scenes>
     <resources>
